  of two means.
- extended the print function for confidence intervals. Now, optional additional
  information is also printed.
- added function hsu.t.test to compute the Hsu two-sample t-test.
- added function power.hsu.t.test to compute power of the Hsu two-sample
  t-test, or determine parameters to obtain a target power.

###########################################################
## Version 1.2
###########################################################
- added as.numeric in the computation of AUC to avoid integer overflow as
  reported by Mike Harwood
- added function power.welch.t.test to compute power of the Welch two-sample
  t-test, or determine parameters to obtain a target power.

###########################################################
## Version 1.1
###########################################################
- added new function glog, glog10, glog2, inv.glog, inv.glog10, inv.glog2 to
  compute the generalized logarithm and its inverse
- added new function melt.long to transform a data.frame form wide to long
  form
- added new functions to scale axes in ggplot2 plots by glog and neglog
- extended function perfMeasures by argument cutoff, predictions are no longer
  restricted to [0,1]
- added new function optCutoff to compute optimal cutoff for various performance
  measures for binary classification

###########################################################
## Version 1.0
###########################################################
- added a vignette

###########################################################
## Version 0.999
###########################################################
- added new function perfMeasures to compute various performance measures
  for binary classification
- added new function thyroid for plotting TSH, fT3, fT4
- removed upper bound n = 100 in modified wilson confidence interval
  (thanks to Andri Signorell for detecting this inconsistency)

###########################################################
## Version 0.998